atualizações do projeto

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <header>
         <img src="assets/logo.png" alt="Logo da banda Spiritbox">
-        <nav>
-            <a href="sobre.html">Sobre</a>
-            <a href="inscricoes.html">Inscrição</a>
+        <nav id="menu">
+            <a class="menu-itens" href="sobre.html">Sobre</a>
+            <a class="menu-itens" href="inscricoes.html">Inscrição</a>
         </nav>
     </header>
 
