--- a/inscricoes.html
+++ b/inscricoes.html
@@ -17,14 +17,14 @@
 <body>
     <header>
         <img src="assets/logo.png" alt="logo da banda Spiritbox">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="sobre.html">Sobre</a>
+        <nav id="menu">
+            <a class="menu-itens" href="index.html">Home</a>
+            <a class="menu-itens" href="sobre.html">Sobre</a>
         </nav>
     </header>
 
     <main>
-
+        
     </main>
 
     <footer>
