atualizações de detalhes visuais

--- a/index.html
+++ b/index.html
@@ -24,11 +24,26 @@
     </header>
 
     <main id="main-home">
-        <img id="img-home" src="https://imageio.forbes.com/specials-images/imageserve/61bb718d9b2dda82b26dd78a/0x0.jpg?format=jpg&width=1200" alt="Imagem da banda Spiritbox">
-        <div id="text-home">
-            <h1>Faça parte do fã-clube!</h1>
-            <h2>Comunidade criada para os fãs da banda Spiritbox!</h2>
-            <p>Criado em 2023, o site tem como objetivo unir os fãs da banda de metal Spiritbox</p>
+        <div id="section01-home">
+            <img src="assets/header.jpg" alt="Imagem da banda Spiritbox">
+            <figcaption>Fã-clube Spiritbox</figcaption>
+            <p>Comunidade criada para os fãs da banda Spiritbox!</p>  
+        </div>
+
+        <div id="section02-home">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Spiritbox_-_Rock_am_Ring_2022-5177.jpg" alt="Courtney LaPlante ao vivo">
+            <div id="descricao-section02">
+                <h2>De fã para fã</h2>
+                <p>Criado em 2023, o fã-clube tem como objetivo unir os fãs da banda de metal Spiritbox e aproximar a comunidade</p>
+            </div>
+        </div>
+
+        <div id="section03-home">
+            <div id="descricao-section03">
+                <h2>Playlist exclusiva</h2>
+                <p>Tenha acesso à playlist exclusiva de membros do fã-clube, com as melhores músicas do metal</p>
+            </div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Spiritbox_-_Rock_am_Ring_2022-3498.jpg/759px-Spiritbox_-_Rock_am_Ring_2022-3498.jpg?20220710095056" alt="Guitarrista ao vivo">
         </div>
     </main>
 
