--- a/sobre.html
+++ b/sobre.html
@@ -25,70 +25,61 @@
         </nav>
     </header>
 
-    <main>
-        <div id="player-spotify">
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/artist/4MzJMcHQBl9SIYSjwWn8QW?utm_source=generator&theme=0"
-                width="60%" height="152" frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"></iframe>
-        </div>
+    <main class="main-sobre">
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/artist/4MzJMcHQBl9SIYSjwWn8QW?utm_source=generator&theme=0" width="60%"
+            height="152" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-        <div id="texto-sobre">
-            <h2>Conheça a banda</h2>
-            <p>
-                Spiritbox é uma banda canadense de metalcore. É formada pelo guitarrista Mike Stringer e vocalista
-                Courtney LaPlante, que são marido e mulher, estabelecidos como "Spiritbox" em 2017. Além deles, a banda
-                conta com o baterista Zev Rose, e o baixista, originalmente da banda As I Lay Dying, Josh Gilbert, que
-                atualmente performa ao vivo com a banda. O estilo da banda é difícil de categorizar em um gênero
-                específico de metal e mostra um arranjo de estilos que variam de diferentes infuências e incorporam
-                alguns compomentes eletrônicos.
-            </p>
-        </div>
+        <h2 class="h2-sobre">Conheça a banda</h2>
+        <p id="texto-sobre">
+            Spiritbox é uma banda canadense de metalcore. É formada pelo guitarrista Mike Stringer e vocalista
+            Courtney LaPlante, que são marido e mulher, estabelecidos como "Spiritbox" em 2017. Além deles, a banda
+            conta com o baterista Zev Rose, e o baixista, originalmente da banda As I Lay Dying, Josh Gilbert, que
+            atualmente performa ao vivo com a banda. O estilo da banda é difícil de categorizar em um gênero
+            específico de metal e mostra um arranjo de estilos que variam de diferentes infuências e incorporam
+            alguns compomentes eletrônicos.
+        </p>
 
-        <div id="tabela-disc">
-            <h2>Discografia</h2>
-            <div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Capa</th>
-                            <th>Album/Singles</th>
-                            <th>Lançamento</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <img class="albums-sobre"
-                                    src="https://cdns-images.dzcdn.net/images/cover/a8a2d756b695ca07160599efea07278c/264x264.jpg"
-                                    alt="Capa do album Rotoscope">
-                            </td>
-                            <td>Rotoscope</td>
-                            <td>Junho de 2022</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img class="albums-sobre"
-                                    src="https://upload.wikimedia.org/wikipedia/en/thumb/9/94/Spiritbox_EternalBlue.jpg/220px-Spiritbox_EternalBlue.jpg"
-                                    alt="Capa do album Eternal Blue">
-                            </td>
-                            <td>Eternal Blue</td>
-                            <td>Setembro de 2021</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <img class="albums-sobre"
-                                    src="https://i.discogs.com/v_9y1T6s5_0fNI02Y_zbG07eQJV4ooTgxywQxs8kQOE/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTE1ODA0/MTM2LTE1OTgxMDQ1/NTUtMTE0NC5qcGVn.jpeg"
-                                    alt="Capa do album Spiritbox">
-                            </td>
-                            <td>Spiritbox</td>
-                            <td>Outubro de 2017</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <h2 class="h2-sobre">Discografia</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Capa</th>
+                    <th>Album/Singles</th>
+                    <th>Lançamento</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <img class="albums-sobre"
+                            src="https://cdns-images.dzcdn.net/images/cover/a8a2d756b695ca07160599efea07278c/264x264.jpg"
+                            alt="Capa do album Rotoscope">
+                    </td>
+                    <td>Rotoscope</td>
+                    <td>Junho de 2022</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="albums-sobre"
+                            src="https://upload.wikimedia.org/wikipedia/en/thumb/9/94/Spiritbox_EternalBlue.jpg/220px-Spiritbox_EternalBlue.jpg"
+                            alt="Capa do album Eternal Blue">
+                    </td>
+                    <td>Eternal Blue</td>
+                    <td>Setembro de 2021</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="albums-sobre"
+                            src="https://i.discogs.com/v_9y1T6s5_0fNI02Y_zbG07eQJV4ooTgxywQxs8kQOE/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTE1ODA0/MTM2LTE1OTgxMDQ1/NTUtMTE0NC5qcGVn.jpeg"
+                            alt="Capa do album Spiritbox">
+                    </td>
+                    <td>Spiritbox</td>
+                    <td>Outubro de 2017</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
     <footer>
