--- a/inscricoes.html
+++ b/inscricoes.html
@@ -38,13 +38,13 @@
                 <input type="text" name="nome">
 
                 <label for="dtNascimento" class="lables-form">Data de nascimento</label>
-                <input type="date" name="dtNascimento" id="dtNascimento"><br>
+                <input type="date" name="dtNascimento" id="dtNascimento" placeholder="Ex: 01/01/2001"><br>
 
                 <label for="email" class="lables-form">E-mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" placeholder="Ex: exemplo@gmail.com">
 
                 <label for="telefone" class="lables-form">Telefone</label>
-                <input type="tel" name="telefone" id="telefone">
+                <input type="tel" name="telefone" id="telefone" placeholder="Ex:(99)(99999-9999)">
 
                 <legend class="lables-form">Sexo</legend>
                 <label class="lables-sexo" for="masculino">Masculino</label>
