--- a/inscricoes.html
+++ b/inscricoes.html
@@ -38,7 +38,7 @@
                 <input type="text" name="nome">
 
                 <label for="dtNascimento" class="lables-form">Data de nascimento</label>
-                <input type="date" name="dtNascimento" id="dtNascimento" placeholder="Ex: 01/01/2001"><br>
+                <input type="date" name="dtNascimento" id="dtNascimento"><br>
 
                 <label for="email" class="lables-form">E-mail</label>
                 <input type="email" name="email" id="email" placeholder="Ex: exemplo@gmail.com">
